// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ColumnFilterGroup /> matches snapshot when loading 1`] = `
<Styled(div)>
  <Styled(div)>
    title text
  </Styled(div)>
  <Styled(div)>
    <SkeletonItem
      isShimmering={true}
    />
    <SkeletonItem
      isShimmering={true}
    />
    <SkeletonItem
      isShimmering={true}
    />
  </Styled(div)>
</Styled(div)>
`;

exports[`<ColumnFilterGroup /> matches snapshot when not loading 1`] = `
<Styled(div)>
  <Styled(div)>
    title text
  </Styled(div)>
  <input
    type="checkbox"
  />
</Styled(div)>
`;

exports[`<ColumnFilterGroup /> matches snapshot when not loading with multiple children 1`] = `
<Styled(div)>
  <Styled(div)>
    title text
  </Styled(div)>
  <input
    type="checkbox"
  />
  <input
    type="checkbox"
  />
</Styled(div)>
`;

exports[`<RowFilterGroup /> matches snapshot when loading 1`] = `
<Styled(div)>
  <Styled(div)>
    title text
  </Styled(div)>
  <Styled(div)>
    <Styled(div)>
      <SkeletonItem
        avatarShape="none"
        isShimmering={true}
      />
    </Styled(div)>
  </Styled(div)>
</Styled(div)>
`;

exports[`<RowFilterGroup /> matches snapshot when not loading 1`] = `
<Styled(div)>
  <Styled(div)>
    title text
  </Styled(div)>
  <Styled(div)>
    <input
      type="checkbox"
    />
  </Styled(div)>
</Styled(div)>
`;

exports[`<RowFilterGroup /> matches snapshot when not loading with multiple children 1`] = `
<Styled(div)>
  <Styled(div)>
    title text
  </Styled(div)>
  <Styled(div)>
    <input
      type="checkbox"
    />
    <input
      type="checkbox"
    />
  </Styled(div)>
</Styled(div)>
`;
